# pyseobnr

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: github.yml
.gitlab/: aei.yml
docs/: README.md  conf.py  index.rst
docs/source/: basic_usage.rst  citations.rst  citing.rst  expert_mode.rst  how_to_contribute.rst  installation.rst
docs/source/notebooks/: example_SEOBNRv5EHM.md  example_precession.md  getting_started.md  pseob_example.md  pycbc_example.md
docs/templates/: custom-class-template.rst
plugin/: pycbc_plugin.py
pyseobnr/: __init__.py  generate_waveform.py
pyseobnr/auxiliary/external_models/: __init__.py  default_settings.py  external_models.py
pyseobnr/auxiliary/interpolate/: README.md  _cubic.py  _ppoly.pyx  interpolate.py  vector_spline.py
pyseobnr/auxiliary/interpolate/tests/: test_spline.py
pyseobnr/auxiliary/mode_mixing/: auxiliary_functions_modemixing.py
pyseobnr/auxiliary/sanity_checks/: EOB_matches.py  NRSur_IV_difference.py  NRSur_matches.py  NR_mismatches.py  aligned_matches_v5PHM.py  aligned_matches_v5PHM.sh  aligned_matches_v5PHM_commentedMatch.py  aligned_matches_v5PHM_commentedMatch.sh  amp_hierarchy_test_prec_submission.py  amplitude_hierarchy_test.py  amplitude_hierarchy_test_precessing.py  attachment_smoothness_test.py  battery_of_tests.py  mismatch_PA_polarization_precession.py  mismatch_PA_polarization_precession.sh  mismatch_fixed_waveform_test.py  mismatch_pert_polarization_aligned.py  mismatch_pert_polarization_precession.py  mismatch_pert_polarization_precession.sh  monotonicity_test.py  parameters.py  phenom_matches.py  reference_smoothness_test.py  single_waveform_tests.py  smoothness_q_chi.py  v5P_NR_coprecessing_match.py
pyseobnr/auxiliary/sanity_checks/metrics/: __init__.py  default_settings.py  metrics.py  unfaithfulness_mode_by_mode.py
pyseobnr/auxiliary/sanity_checks/templates/: slurm.jinja
pyseobnr/eob/: __init__.py
pyseobnr/eob/dynamics/: initial_conditions_aligned_ecc_opt.py  initial_conditions_aligned_opt.py  initial_conditions_aligned_precessing.py  initial_conditions_precessing_postadiabatic.py  integrate_ode.py  integrate_ode_ecc.py  integrate_ode_prec.py  pn_EoMs_opt.pxd  pn_EoMs_opt.pyx  pn_evolution_opt.py  postadiabatic_C.pxd  postadiabatic_C.pyx  postadiabatic_C_fast.pyx  postadiabatic_C_prec.pyx  rhs_aligned.pxd  rhs_aligned.pyx  rhs_aligned_ecc.pyx  rhs_precessing.pxd  rhs_precessing.pyx
pyseobnr/eob/dynamics/Keplerian_evolution_equations_flags/: __init__.pxd  __init__.py  _implementation.pxd  _implementation.pyx
pyseobnr/eob/dynamics/secular_evolution_equations_flags/: __init__.pxd  __init__.py  _implementation.pxd  _implementation.pyx
pyseobnr/eob/fits/: EOB_fits.py  GSF_fits.py  IV_fits.py  MR_fits.py  __init__.py  antisymmetric_modes.py  fits_Hamiltonian.py
pyseobnr/eob/hamiltonian/: Ham_AvgS2precess_simple_cython_AD.pyx  Ham_AvgS2precess_simple_cython_PA_AD.pyx  Ham_align_AvgS2precess_simple_18102022_clean_v5PHM_opt_AD.py  Ham_align_a6_apm_AP15_DP23_gaugeL_Tay_C.pyx  Hamiltonian_C.pxd  Hamiltonian_C.pyx  Hamiltonian_v5PHM_C.pxd  Hamiltonian_v5PHM_C.pyx  __init__.py  hamiltonian.py
pyseobnr/eob/utils/: containers.pxd  containers.pyx  containers_coeffs_PN.pxd  containers_coeffs_PN.pyx  eob_parameters.h  math_ops_opt.py  nr_utils.py  utils.py  utils_eccentric.py  utils_pn_opt.pxd  utils_pn_opt.pyx  utils_precession_opt.py  waveform_ops.py
pyseobnr/eob/waveform/: __init__.py  compute_MR.py  compute_antisymmetric.py  compute_hlms.py  waveform.pxd  waveform.pyx  waveform_ecc.pxd  waveform_ecc.pyx
pyseobnr/eob/waveform/RRforce_NS_v5EHM_v1_flags/: __init__.pxd  __init__.py  _implementation.pxd  _implementation.pyx
pyseobnr/eob/waveform/modes_ecc_corr_NS_v5EHM_v1_flags/: __init__.pxd  __init__.py  _implementation.pxd  _implementation.pyx
pyseobnr/gwsignal/: __init__.py  gwsignal_models.py
pyseobnr/models/: SEOBNRv5Base.py  SEOBNRv5EHM.py  SEOBNRv5HM.py  __init__.py  common.py  model.py
pyseobnr/plugins/: bilby_plugin.py  gwsignal_plugin.py  pycbc_plugin.py
pyseobnr/test/: __init__.py  conftest.py
pyseobnr/test/regression_tests/: regenerate_SEOBNRv5HM.py  template_v5HM_tests.jinja  template_v5PHM_tests.jinja  test_SEOBNRv5HM.py  test_settings.py  test_utils.py
test/autogenerated_code/seobnrv5ehm_keplerian_evolution_eqn/: test_evolution_equations.py
test/autogenerated_code/seobnrv5ehm_keplerian_evolution_eqn/edot/: num1.txt  num2.txt
test/autogenerated_code/seobnrv5ehm_keplerian_evolution_eqn/xavg_omegainst/: num1.txt  num2.txt
test/autogenerated_code/seobnrv5ehm_keplerian_evolution_eqn/zdot/: num1.txt  num2.txt
test/autogenerated_code/seobnrv5ehm_modes_eqn/: test_modes_equations.py
test/autogenerated_code/seobnrv5ehm_modes_eqn/21/: num1.txt  num2.txt
test/autogenerated_code/seobnrv5ehm_modes_eqn/22/: num1.txt  num2.txt
test/autogenerated_code/seobnrv5ehm_modes_eqn/31/: num1.txt  num2.txt
test/autogenerated_code/seobnrv5ehm_modes_eqn/32/: num1.txt  num2.txt
test/autogenerated_code/seobnrv5ehm_rrforces_eqn/: test_rrforces_equations.py
test/autogenerated_code/seobnrv5ehm_secular_evolution_equations/: test_secular_evolution_equations.py
test/data/: generate_eccentric_waveform_dynamics_gt.py  generate_precessing_waveform_dynamics_gt.py
test/regression_tests/: helpers.py  regenerate_SEOBNRv5HM.py  regenerate_SEOBNRv5HM_test.py  regenerate_SEOBNRv5PHM.py  template_v5HM_tests.jinja  template_v5PHM_tests.jinja  test_SEOBNRv5EHM.py  test_SEOBNRv5HM.py  test_SEOBNRv5HM_dynamics.py  test_SEOBNRv5PHM.py  test_SEOBNRv5PHM_antisymmetric.py  test_SEOBNRv5PHM_dynamics.py  test_SEOBNRv5PHM_internals.py  test_conventions.py  test_cython_containers.py  test_gwsignal_plugin.py  test_hamiltonian.py  test_nqc.py  test_nrutils.py  test_pSEOB.py  test_post_adiabatic_functions.py  test_pycbc_plugin.py  test_settings.py  test_settings_antisymmetric_modes.py  test_utils.py
(+73 files in other folders)
