
[build-system]
    # -- build --------
    build-backend = "setuptools.build_meta"
    requires = [
        "setuptools>=78.0.0",
        "setuptools_scm[toml]>=3.4.3",
        "wheel",
        "cython>=3.0.11",
        "numpy>=1.23.0",
        "scipy>=1.8.0",
        "importlib_resources ; python_version < '3.10'",
    ]


[project]
    # -- metadata -----
    authors = [
        { name = "Serguei Ossokine", email = "serguei.ossokine@tutanota.com" },
        { name = "Lorenzo Pompili", email = "lorenzo.pompili@ligo.org" },
        { name = "Deyan Mihaylov", email = "deyan.mihaylov@ligo.org" },
        { name = "Antoni Ramos Buades", email = "antoni.ramos-buades@ligo.org" },
        { name = "Michael Puerrer", email = "michael.puerrer@ligo.org" },
        { name = "Hector Estelles", email = "hector.estelles@ligo.org" },
    ]

    maintainers = [
        { name = "Raffi Enficiaud", email = "raffi.enficiaud@ligo.org" },
        { name = "Lorenzo Pompili", email = "lorenzo.pompili@ligo.org" },
        { name = "Hector Estelles", email = "hector.estelles@ligo.org" },
    ]

    description = "Gravitational wave modelling within the effective-one-body framework"
    license     = "GPL-3.0-or-later"
    name        = "pyseobnr"
    readme      = "README.rst"

    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Operating System :: MacOS",
        "Operating System :: Unix",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Scientific/Engineering :: Physics",
    ]

    # requirements:
    dependencies = [
        "numpy>=1.23.0",
        "scipy>=1.8.0",
        "h5py",
        "numexpr",
        "numba",
        "qnm",
        "scri",
        "pygsl_lite",
        "lalsuite",
        "importlib_resources ; python_version < '3.10'",
    ]

    requires-python = ">=3.8"

    # dynamic properties set by tools:
    dynamic = ["version"]

[project.urls]
    homepage      = "https://git.ligo.org/waveforms/software/pyseobnr"
    documentation = "https://waveforms.docs.ligo.org/software/pyseobnr/"
    issues        = "https://git.ligo.org/waveforms/software/pyseobnr/-/issues"
    changelog     = "https://git.ligo.org/waveforms/software/pyseobnr/-/blob/main/CHANGELOG.md"

[project.entry-points."pycbc.waveform.td"]
    SEOBNRv5HM  = "pyseobnr.plugins.pycbc_plugin:PySEOBNRv5PyCBCPlugin_v5HM.gen_td"
    SEOBNRv5PHM = "pyseobnr.plugins.pycbc_plugin:PySEOBNRv5PyCBCPlugin_v5PHM.gen_td"

[project.entry-points."pycbc.waveform.fd"]
    SEOBNRv5HM  = "pyseobnr.plugins.pycbc_plugin:PySEOBNRv5PyCBCPlugin_v5HM.gen_fd"
    SEOBNRv5PHM = "pyseobnr.plugins.pycbc_plugin:PySEOBNRv5PyCBCPlugin_v5PHM.gen_fd"

[tool.setuptools_scm]
    write_to = "pyseobnr/_version.py"

[tool.setuptools]
    include-package-data = false

[tool.setuptools.package-data]
    "*" = ["*.npz"]

[tool.setuptools.packages.find]
    where = ["."]
    include = ["pyseobnr*"]
    exclude = ["*sanity_checks*"]
    namespaces = false

[project.optional-dependencies]
    checks = ['bilby', 'gwsurrogate', 'pathos', 'scikit-optimize', 'matplotlib']

    docs = [
        'nbsphinx',
        'numpydoc',
        'sphinx',
        'sphinx_rtd_theme',
        'sphinx-tabs',
        'cython',
        "sphinx_gallery",
        "jupytext",
        "jupyterlab",
        "pandas",
        'pyarrow',
        'seaborn',
        'pycbc',
        'astropy',
        'gwpy',
        'matplotlib',
    ]

    tests = ['pytest', 'pytest-sugar', 'pandas', 'pyarrow', 'pycbc']

[tool.pytest.ini_options]
    minversion = "6.0"
    testpaths  = ["test"]

[tool.isort]
    # .pre-commit-config.yaml will read from there
    profile                = "black"
    src_paths              = ["pyseobnr", "test"]
    sections               = "FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,TESTS,PYSEOBNR,LOCALFOLDER"
    extra_standard_library = "tomllib"
    known_tests            = "pytest"
    known_pyseobnr         = "pyseobnr"

[tool.flake8]
    # remember to sync with .pre-commit-config.yaml
    ignore          = ['E203', 'W503']
    skip_glob       = ["*.jinja", "*.wl"]
    max-line-length = 110                 # black will take care of most of this
    count           = true

[tool.cython-lint]
    max-line-length = 110
    ignore          = ['E503', 'E504', 'E741']
