[metadata]
name = pyseob
author = Serguei Ossokine
author_email = serguei.ossokine@ligo.org
license = MIT
license_files = licenses/LICENSE.rst
url = https://lscsoft.docs.ligo.org/ligo.skymap/
description = Package for modelling gravitational waves from compact binary coalescences within the effective one body framework
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
#project_urls =
#    Bug Tracker = https://git.ligo.org/lscsoft/ligo.skymap/issues
#    Change Log = https://lscsoft.docs.ligo.org/ligo.skymap/changes.html
#    Documentation = https://lscsoft.docs.ligo.org/ligo.skymap
#    GitHub = https://github.com/lpsinger/ligo.skymap
#    Source Code = https://git.ligo.org/lscsoft/ligo.skymap

[options]
zip_safe = False
#packages = find_namespace:
#namespace_packages = ligo
python_version = >=3.8
setup_requires = setuptools_scm
install_requires =
    astropy
    h5py
    lalsuite>=7.0
    matplotlib>=3.4.0
    networkx
    numpy>=1.20.0
    scipy>=0.14
    tqdm>=4.27.0
    cython

    
